force-app/main/default/objects/AsyncFunctionInvocationRequest__c/AsyncFunctionInvocationRequest__c.object-meta.xml
<CustomObject>
    <label>Async Function Invocation Request</label>
    <nameField>
        <displayFormat>AFIR-{0000}</displayFormat>
        <label>AsyncFunctionInvocationRequest Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Function Invocation Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>