force-app/main/default/objects/AsyncFunctionInvocationRequest__c/fields/AsyncInvocationJobId__c.field-meta.xml
<CustomField>
    <fullName>AsyncInvocationJobId__c</fullName>
    <label>Async Invocation Job Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>