force-app/main/default/objects/AsyncFunctionInvocationRequest__c/fields/Callback__c.field-meta.xml
<CustomField>
    <fullName>Callback__c</fullName>
    <label>Callback</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>