force-app/main/default/objects/AsyncFunctionInvocationRequest__c/fields/CallbackType__c.field-meta.xml
<CustomField>
    <fullName>CallbackType__c</fullName>
    <label>CallbackType</label>
    <type>TextArea</type>
</CustomField>