force-app/main/default/objects/AsyncFunctionInvocationRequest__c/fields/ExtraInfo__c.field-meta.xml
<CustomField>
    <fullName>ExtraInfo__c</fullName>
    <label>ExtraInfo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>